# ChatTree

./: .gitattributes  .gitignore  README.md  TreeChat.sln  check.bat  config.example.json  launcher-debug.bat  launcher.bat  run.bat  启动.vbs
.claude/plans/: chat-api-bubbly-quokka.md
backend/: .env.example  .gitignore  pyproject.toml
backend/src/: main.py
backend/src/api/: dependencies.py  routes.py  schemas.py
backend/src/core/: config.py  errors.py  logger.py
backend/src/models/: chat_message.py  chat_tree.py  chat_tree_node.py
backend/src/services/: file_service.py  llm_client.py  llm_service.py  tree_manager.py
backend/tests/: conftest.py  test_file_service.py  test_llm_service.py  test_tree_manager.py
gui/: App.xaml  App.xaml.cs  TreeChat.csproj
gui.tests/: Program.cs  TreeChat.Gui.Tests.csproj
gui/Infrastructure/: AppLogger.cs
gui/Models/: ApiModels.cs  ChatTree.cs  ChatTreeData.cs  ChatTreeNode.cs  ChatTreeNodeData.cs
gui/Services/: AIClient.cs  ApiConfig.cs  ApiConfigData.cs  ChatMessageData.cs  ChatTreeData.cs  ChatTreeNodeData.cs  FileService.cs  IFileService.cs  JsonSerializationService.cs  PythonBackendService.cs  RecentFilesManager.cs  TreeLayoutService.cs
gui/ViewModels/: ChatInformationVM.cs  ChatManagementPanelVM.cs  ConfigDialogVM.cs  ConnectionVM.cs  FileViewVM.cs  MainWindowVM.cs  TreeNodeVM.cs  TreeVisualizationVM.cs
gui/Views/: ChatInformationView.xaml  ChatInformationView.xaml.cs  ChatInputKeyBehavior.cs  ConfigDialog.xaml  ConfigDialog.xaml.cs  FileView.xaml  FileView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  (+7 more)
(+1 files in other folders)
